--- a/src/components/gameStatus/gameOver.scss
+++ b/src/components/gameStatus/gameOver.scss
@@ -17,6 +17,9 @@
   margin: 0;
 }
 
+.pokeImage {
+  transform: scale(1.5, 1.5);
+}
 h3 {
   font-family: "pokemonSolid", sans-serif;
   color: #f6bd20;
