--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -4,7 +4,7 @@
 }
 
 .board {
-  display: block;
+  display: flex;
   padding-top: 20px;
   width: 450px;
   height: 350px;
@@ -13,25 +13,9 @@
 
 .row {
   display: flex;
+  height: 100%;
   justify-content: center;
   flex-direction: row;
-}
-
-.letter {
-  width: 12%;
-  font-family: "pokemonSolid", sans-serif;
-  font-size: 24px;
-  color: #fafaff;
-  text-shadow: 1px 2px rgba(57, 107, 186, 0.5);
-  border-radius: 10%;
-  height: 50px;
-  margin-right: 4px;
-  margin-bottom: 4px;
-  display: flex;
-  place-items: center;
-  justify-content: center;
-
-  background: rgba(58, 57, 60, 0.5);
 }
 
 @keyframes rotateLetter {
